[metadata]
description-file =
    README.md

[bumpversion]
current_version = 0.0.1
commit = True
tag = False

[bumpversion:file:deptracy/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:docs/conf.py]
search = = {current_version}
replace = = {new_version}

[flake8]
exclude = build,.git,.tox
max-line-length = 119

[tool:pytest]
norecursedirs = venv .tox
